# quickflow

./: .gitignore  README.md  alembic.ini  pyproject.toml
quickflow/: __main__.py  config.py  consts.py  db.py  main.py
quickflow/actions/: register.py
quickflow/actions/invoice/: base.py  wfirma.py
quickflow/actions/mail/: base.py  gdrive.py  gmail.py
quickflow/actions/storage/: __init__.py  base.py  gdrive.py  local.py
quickflow/api/: client.py
quickflow/external_actions/chain/: base.py  invoice.py  mail.py  models.py  storage.py
quickflow/external_actions/strategy/: __init__.py  base.py
quickflow/external_actions/strategy/invoice/: __init__.py  base.py  wfirma.py
quickflow/external_actions/strategy/mail/: __init__.py  base.py  gmail.py
quickflow/external_actions/strategy/storage/: __init__.py  base.py  gdrive.py
quickflow/logs/: __init__.py  logger.py  middleware.py
quickflow/models/: user.py
quickflow/models/migrations/: env.py
quickflow/models/migrations/versions/: 2023-10-09T12:51_base_user_model.py
quickflow/tasks/: __init__.py  celery.py  test.py
tests/config/: test_external_action_strategy.py
